--- a/src/main/resources/assets/fasterminecarts/lang/ja_jp.json
+++ b/src/main/resources/assets/fasterminecarts/lang/ja_jp.json
@@ -3,13 +3,13 @@
     "modmenu.descriptionTranslation.fasterminecarts": "トロッコの速度をより速くします。",
     "text.autoconfig.fasterminecarts.title": "Faster Minecarts",
     "text.autoconfig.fasterminecarts.category.general": "General",
-    "text.autoconfig.fasterminecarts.category.customControl": "カスタム制御",
+    "text.autoconfig.fasterminecarts.category.speedControl": "Speed Control",
     "text.autoconfig.fasterminecarts.option.enableMod": "Modを有効にする",
     "text.autoconfig.fasterminecarts.option.enableMod.@Tooltip": "Faster Minecarts を有効にする。",
     "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown": "自動で減速",
     "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown.@Tooltip": "コーナーでの脱線を防ぐために自動で減速するようになります。(Update: and hills)",
     "text.autoconfig.fasterminecarts.option.ascendingSlowdown": "Ascending Slowdown",
-    "text.autoconfig.fasterminecarts.option.ascendingSlowdown.@Tooltip": "You can turn off automatic slowdown on hills from here.",
+    "text.autoconfig.fasterminecarts.option.ascendingSlowdown.@Tooltip": "You can turn off automatic slowdown on hills here.",
     "text.autoconfig.fasterminecarts.option.slowdownCheckDistance": "Slowdown Check Distance",
     "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[0]": "The mod needs to check for corners and ascending rails in advance.",
     "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[1]": "This setting controls an approximate distance for the check.",
@@ -19,15 +19,17 @@
     "text.autoconfig.fasterminecarts.option.manualMinecartSlowDown.@Tooltip": "ソウルサンドブロックまたはスライムブロックで減速するようになります。(Update: and honey blocks)",
     "text.autoconfig.fasterminecarts.option.storageMinecartSlowDown": "ストレージ系トロッコの減速",
     "text.autoconfig.fasterminecarts.option.storageMinecartSlowDown.@Tooltip": "ホッパー上のホッパートロッコもしくはチェストトロッコが自動で減速するようになります。",
-    "text.autoconfig.fasterminecarts.option.maxSpeed": "最大速度",
+    "text.autoconfig.fasterminecarts.option.maxSpeed": "Acceleration Rail Speed",
     "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[0]": "最大速度を変更します（メートル/秒単位）。",
     "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[1]": "バニラは8、デフォルトは24です。",
     "text.autoconfig.fasterminecarts.option.customSpeedOne": "Lapis Lazuli Rail Speed",
-    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[0]": "Change the maximum speed set by lapis lazuli rails.",
-    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[1]": "There's no upper limit on the maximum speed. Use at your own risk.",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[0]": "Change maximum speed set by lapis lazuli rails.",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[1]": "Lapis lazuli rails set maximum speed only. Minecarts must pass acceleration rails first!",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[2]": "There's no upper limit on the maximum speed. Use at your own risk.",
     "text.autoconfig.fasterminecarts.option.customSpeedTwo": "Copper Rail Speed",
-    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[0]": "Change the maximum speed set by copper rails.",
-    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[1]": "There's no upper limit on the maximum speed. Use at your own risk.",
+    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[0]": "Change maximum speed set by copper rails.",
+    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[1]": "Copper rails set maximum speed only. Minecarts must pass acceleration rails first!",
+    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[2]": "There's no upper limit on the maximum speed. Use at your own risk.",
     "block.fasterminecarts.acceleration_rail": "加速レール",
     "block.fasterminecarts.deceleration_rail": "減速レール",
     "block.fasterminecarts.custom_speed_rail_one": "Lapis Lazuli Rail",
