--- a/src/main/resources/assets/fasterminecarts/lang/zh_cn.json
+++ b/src/main/resources/assets/fasterminecarts/lang/zh_cn.json
@@ -3,11 +3,11 @@
     "modmenu.descriptionTranslation.fasterminecarts": "将矿车的速度加快。",
     "text.autoconfig.fasterminecarts.title": "极速矿车",
     "text.autoconfig.fasterminecarts.category.general": "通用",
-    "text.autoconfig.fasterminecarts.category.customControl": "自定义控制",
+    "text.autoconfig.fasterminecarts.category.speedControl": "速度控制",
     "text.autoconfig.fasterminecarts.option.enableMod": "启用极速矿车",
     "text.autoconfig.fasterminecarts.option.enableMod.@Tooltip": "启用极速矿车模组。",
     "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown": "自动减速",
-    "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown.@Tooltip": "防止矿车在拐弯处和上坡处脱轨。",
+    "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown.@Tooltip": "自动减速来防止矿车在拐弯处和上坡处脱轨。",
     "text.autoconfig.fasterminecarts.option.ascendingSlowdown": "上坡自动减速",
     "text.autoconfig.fasterminecarts.option.ascendingSlowdown.@Tooltip": "你可以在这里关闭上坡自动减速。",
     "text.autoconfig.fasterminecarts.option.slowdownCheckDistance": "减速距离",
@@ -19,15 +19,17 @@
     "text.autoconfig.fasterminecarts.option.manualMinecartSlowDown.@Tooltip": "在轨道下方放置灵魂沙，黏液块或蜂蜜块来手动减速。",
     "text.autoconfig.fasterminecarts.option.storageMinecartSlowDown": "运输矿车减速",
     "text.autoconfig.fasterminecarts.option.storageMinecartSlowDown.@Tooltip": "让运输矿车和漏斗矿车在漏斗上减速。",
-    "text.autoconfig.fasterminecarts.option.maxSpeed": "最高速度",
-    "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[0]": "调整加速轨道最高可加速到的速度。",
+    "text.autoconfig.fasterminecarts.option.maxSpeed": "加速轨道速度",
+    "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[0]": "调整加速轨道设置的最高速度。",
     "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[1]": "原版值为8，默认值为24 (米每秒)。",
     "text.autoconfig.fasterminecarts.option.customSpeedOne": "青金石轨道速度",
-    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[0]": "调整青金石轨道可加速到的速度。",
-    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[1]": "最高速度无上限，谨慎使用。",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[0]": "调整青金石轨道设置的最高速度。",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[1]": "青金石轨道只改变最高速度，矿车必须要先通过加速轨道才能加速！",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[2]": "最高速度无上限，谨慎使用。",
     "text.autoconfig.fasterminecarts.option.customSpeedTwo": "铜轨道速度",
-    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[0]": "调整铜轨道可加速到的速度。",
-    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[1]": "最高速度无上限，谨慎使用。",
+    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[0]": "调整铜轨道设置的最高速度。",
+    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[1]": "铜轨道只改变最高速度，矿车必须要先通过加速轨道才能加速！",
+    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[2]": "最高速度无上限，谨慎使用。",
     "block.fasterminecarts.acceleration_rail": "加速轨道",
     "block.fasterminecarts.deceleration_rail": "减速轨道",
     "block.fasterminecarts.custom_speed_rail_one": "青金石轨道",
