--- a/src/main/resources/assets/fasterminecarts/lang/en_us.json
+++ b/src/main/resources/assets/fasterminecarts/lang/en_us.json
@@ -3,13 +3,13 @@
     "modmenu.descriptionTranslation.fasterminecarts": "Increases the speed of minecarts.",
     "text.autoconfig.fasterminecarts.title": "Faster Minecarts",
     "text.autoconfig.fasterminecarts.category.general": "General",
-    "text.autoconfig.fasterminecarts.category.customControl": "Custom Control",
+    "text.autoconfig.fasterminecarts.category.speedControl": "Speed Control",
     "text.autoconfig.fasterminecarts.option.enableMod": "Enable Mod",
     "text.autoconfig.fasterminecarts.option.enableMod.@Tooltip": "Enable faster minecarts.",
     "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown": "Automatic Slowdown",
     "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown.@Tooltip": "Enable automatic slowdown to prevent derailing at corners and hills.",
     "text.autoconfig.fasterminecarts.option.ascendingSlowdown": "Ascending Slowdown",
-    "text.autoconfig.fasterminecarts.option.ascendingSlowdown.@Tooltip": "You can turn off automatic slowdown on hills from here.",
+    "text.autoconfig.fasterminecarts.option.ascendingSlowdown.@Tooltip": "You can turn off automatic slowdown on hills here.",
     "text.autoconfig.fasterminecarts.option.slowdownCheckDistance": "Slowdown Check Distance",
     "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[0]": "The mod needs to check for corners and ascending rails in advance.",
     "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[1]": "This setting controls the approximate distance for the check.",
@@ -19,15 +19,17 @@
     "text.autoconfig.fasterminecarts.option.manualMinecartSlowDown.@Tooltip": "Enable manual slowdown on soul sand blocks, slime blocks, and honey blocks.",
     "text.autoconfig.fasterminecarts.option.storageMinecartSlowDown": "Storage Minecart Slowdown",
     "text.autoconfig.fasterminecarts.option.storageMinecartSlowDown.@Tooltip": "Enable automatic slowdown for hopper and chest minecarts on hopper entities.",
-    "text.autoconfig.fasterminecarts.option.maxSpeed": "Maximum Speed",
-    "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[0]": "Change the maximum speed set by acceleration rails.",
+    "text.autoconfig.fasterminecarts.option.maxSpeed": "Acceleration Rail Speed",
+    "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[0]": "Change maximum speed set by acceleration rails.",
     "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[1]": "Vanilla value is 8, default value is 24 (in meters per second).",
     "text.autoconfig.fasterminecarts.option.customSpeedOne": "Lapis Lazuli Rail Speed",
-    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[0]": "Change the maximum speed set by lapis lazuli rails.",
-    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[1]": "There's no upper limit on the maximum speed. Use at your own risk.",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[0]": "Change maximum speed set by lapis lazuli rails.",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[1]": "Lapis lazuli rails set maximum speed only. Minecarts must pass acceleration rails first!",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[2]": "There's no upper limit on the maximum speed. Use at your own risk.",
     "text.autoconfig.fasterminecarts.option.customSpeedTwo": "Copper Rail Speed",
-    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[0]": "Change the maximum speed set by copper rails.",
-    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[1]": "There's no upper limit on the maximum speed. Use at your own risk.",
+    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[0]": "Change maximum speed set by copper rails.",
+    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[1]": "Copper rails set maximum speed only. Minecarts must pass acceleration rails first!",
+    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[2]": "There's no upper limit on the maximum speed. Use at your own risk.",
     "block.fasterminecarts.acceleration_rail": "Acceleration Rail",
     "block.fasterminecarts.deceleration_rail": "Deceleration Rail",
     "block.fasterminecarts.custom_speed_rail_one": "Lapis Lazuli Rail",
