--- a/src/main/resources/assets/fasterminecarts/lang/zh_cn.json
+++ b/src/main/resources/assets/fasterminecarts/lang/zh_cn.json
@@ -24,11 +24,11 @@
     "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[1]": "原版值为8，默认值为24 (米每秒)。",
     "text.autoconfig.fasterminecarts.option.customSpeedOne": "青金石轨道速度",
     "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[0]": "调整青金石轨道设置的最高速度。",
-    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[1]": "青金石轨道只改变最高速度，矿车必须要先通过加速轨道才能加速！",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[1]": "青金石轨道只改变最高速度，矿车必须先通过加速轨道才能加速！",
     "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[2]": "最高速度无上限，谨慎使用。",
     "text.autoconfig.fasterminecarts.option.customSpeedTwo": "铜轨道速度",
     "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[0]": "调整铜轨道设置的最高速度。",
-    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[1]": "铜轨道只改变最高速度，矿车必须要先通过加速轨道才能加速！",
+    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[1]": "铜轨道只改变最高速度，矿车必须先通过加速轨道才能加速！",
     "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[2]": "最高速度无上限，谨慎使用。",
     "block.fasterminecarts.acceleration_rail": "加速轨道",
     "block.fasterminecarts.deceleration_rail": "减速轨道",
